# 42nerdsctl

./: .gitignore  .gitlab-ci.yml  .gitpod.Dockerfile  .goreleaser.yml  BUILD  README.adoc  WORKSPACE  bazel-42nerdsctl  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  go.mod  go.sum  main.go
.github/workflows/: go.yml  goreleaser.yml
cmd/: BUILD.bazel  checkin.go  checkout.go  completion.go  config.go  config_set.go  config_view.go  create.go  devtools.go  devtools_gitignore.go  projects.go  root.go  set.go  view.go
cmd/config/: BUILD.bazel  config.go  set.go  view.go
cmd/devtools/: devtools.go  gitignore.go
cmd/projects/: BUILD.bazel  create.go  projects.go  root.go
