load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["root.go"],
    importpath = "bitbucket.com/42nerds/42nerdsctl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//cmd/config:go_default_library",
        "//cmd/projects:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
